feat(character): Add character page directory
Added Cassie.html, Jason.html, and Takeda.html to characters directory
Character pages hyperlinked to homepage

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <p>and fundamentals on how to cook with these characters and get good with them.</p>
     <p><i>Click on any of the character's link below to go their recipe pages and learn about them</i></p>
     <ul>
-        <li><a>Jason Vorhees</a></li>
-        <li><a>Cassie Cage</a></li>
-        <li><a>Takeda Takahashi</a></li>
+        <li><a href = "./characters/Jason.html" target = "_blank" rel = "noopener noreferrer">Jason Vorhees</a></li>
+        <li><a href = "./characters/Cassie.html" target = "_blank" rel = "noopener noreferrer">Cassie Cage</a></li>
+        <li><a href = "./characters/Takeda.html" target = "_blank" rel = "noopener noreferrer">Takeda Takahashi</a></li>
     </ul>
 </body>
 </html>
