refactor: Pivot project to TASTY_recipes
Character pages renamed to recipe pages
ButterChicken.html Tacos.html OrangeChicken.html
Directories renamed: MKX_recipes -> TASTY_recipes characters -> recipes

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang = "en">
     <head>
         <meta charset = "utf-8">
-        <title>MKX Character Recipes</title>
+        <title>Tasty recipes for authentic dishes</title>
     </head>
 <body>
-    <h2>Characters:</h2>
-    <p>This MKX character recipe guide will help you know and understand the basics</p>
-    <p>and fundamentals on how to cook with these characters and get good with them.</p>
-    <p><i>Click on any of the character's link below to go their recipe pages and learn about them</i></p>
+    <h2>Dishes:</h2>
+    <p>This recipe guide will help you to know and understand the basics</p>
+    <p>of how to cook these authentic dishes with the most complete ingredients to get the most authentic taste possible.</p>
+    <p><i>Click on any of the dishes link below to go their recipe pages and learn about them</i></p>
     <ul>
-        <li><a href = "./characters/Jason.html" target = "_blank" rel = "noopener noreferrer">Jason Vorhees</a></li>
-        <li><a href = "./characters/Cassie.html" target = "_blank" rel = "noopener noreferrer">Cassie Cage</a></li>
-        <li><a href = "./characters/Takeda.html" target = "_blank" rel = "noopener noreferrer">Takeda Takahashi</a></li>
+        <li><a href = "./characters/ButterChicken.html" target = "_blank" rel = "noopener noreferrer">Butter Chicken</a></li>
+        <li><a href = "./characters/Tacos.html" target = "_blank" rel = "noopener noreferrer">Tacos</a></li>
+        <li><a href = "./characters/OrangeChicken.html" target = "_blank" rel = "noopener noreferrer">Orange Chicken</a></li>
     </ul>
 </body>
 </html>
