feat(recipes): Recipe pages updated with content
Updated ButterChicken.html, Tacos.html and OrangeChicken.html
Recipe specific images added into images/ index.html updated accordingly

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <p>of how to cook these authentic dishes with the most complete ingredients to get the most authentic taste possible.</p>
     <p><i>Click on any of the dishes link below to go their recipe pages and learn about them</i></p>
     <ul>
-        <li><a href = "./characters/ButterChicken.html" target = "_blank" rel = "noopener noreferrer">Butter Chicken</a></li>
-        <li><a href = "./characters/Tacos.html" target = "_blank" rel = "noopener noreferrer">Tacos</a></li>
-        <li><a href = "./characters/OrangeChicken.html" target = "_blank" rel = "noopener noreferrer">Orange Chicken</a></li>
+        <li><a href = "./recipes/ButterChicken.html" target = "_blank" rel = "noopener noreferrer">Butter Chicken</a></li>
+        <img src = "./images/ButterChicken.jpg">
+        <li><a href = "./recipes/Tacos.html" target = "_blank" rel = "noopener noreferrer">Tacos</a></li>
+        <img src = "./images/Tacos.jpg">
+        <li><a href = "./recipes/OrangeChicken.html" target = "_blank" rel = "noopener noreferrer">Orange Chicken</a></li>
+        <img src = "./images/OrangeChicken.jpeg" height = 640 width = 480>
     </ul>
 </body>
 </html>
