--- a/recipes/ButterChicken.html
+++ b/recipes/ButterChicken.html
@@ -2,9 +2,61 @@
 <html lang = "en">
 <head>
     <meta charset = "utf-8">
-    <title></title>
+    <title>Butter Chicken</title>
 </head>
 <body>
-
+    <img src = "../images/ButterChicken.jpg">
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>500g chicken (boneless), cut into bite sized cubes</li>
+        <li>3 tbsp butter</li>
+        <li>1 cup tomato puree</li>
+        <li>1/2 cup heavy cream</li>
+        <li>2 tbsp yoghurt</li>
+        <li>1 tbsp ginger-garlic paste</li>
+        <li>1 tbsp chili powder</li>
+        <li>1/2 tbsp turmeric powder</li>
+        <li>1 tbsp garam masala</li>
+        <li>1 tbsp cumin paste</li>
+        <li>Salt to taste</li>
+        <li>Fresh coriander for garnish</li>
+    </ul>
+    <p>Now moving on to the cooking part of this recipe,</p>
+    <p>follow the below given steps by the dot and you should be</p>
+    <p>ready with this amazing authentic dish in max to max 2 hrs.</p>
+    <h2>Cooking Instructions:</h2>
+    <ol>
+        <li><h3>Marinating and preparing the chicken</h3></li>
+            <ul>
+            <li>First collect all the chicken cubes in a decently sized bowl</li>
+            <li>Mix the cubes with yoghurt, chili powder, turmeric and salt</li>
+            <li>and let it sit for 30mins - 1 hrs, 2-4 hrs or 8-12 hrs (more time equals more flavour in the chicken).</li>
+            </ul>
+        <li><h3>Cooking the marinatd chicken</h3></li>
+            <ul>
+                <li>Bring 2tbsp of butter to medium heat in a pan</li>
+                <li>Sear the chicken in the butter until lightly browned</li>
+                <li>Then remove and set aside the chicken</li>
+            </ul>
+        <li><h3>Preparing the sauce</h3></li>
+            <ul>
+                <li>In the same pan, add 1tbsp of butter and then saute the ginger-garlic paste we kept aside</li>
+                <li>Add our tomato puree, cumin powder, and garam masala</li>
+                <li>Cook for 5-7 mins until the oil seperates from the sauce</li>
+            </ul>
+        <li><h3>Combine the chicken and the sauce</h3></li>
+            <ul>
+                <li>Return the chicken we kept aside into the pan with the sauce</li>
+                <li>Add in our heavy cream and mix thouroughly</li>
+                <li>Let it simmer for 10 mins</li>
+                <li>Adjust salt as needed</li>
+            </ul>
+        <li><h3>Garnish and serve</h3></li>
+            <ul>
+                <li>Take out all of the dish in a seperate bowl entirely</li>
+                <li>Sprinkle with fresh coriander on top</li>
+                <li>Server with hot naan, roti or steamed rice</li>
+            </ul>
+    </ol>
 </body>
 </html>
