--- a/recipes/OrangeChicken.html
+++ b/recipes/OrangeChicken.html
@@ -2,9 +2,69 @@
 <html lang = "en">
 <head>
     <meta charset = "utf-8">
-    <title></title>
+    <title>Orange Chicken</title>
 </head>
 <body>
-
+    <img src = "../images/OrangeChicken.jpeg " height = 640 width = 480>
+    <h2>Ingredients:</h2>
+    <h3>For the chicken:</h3>
+    <ul>
+        <li>1.5 lbc (about 7004) boneless skinless chicken thighs (bite sized pieces)</li>
+        <li>2 eggs (lightly beaten)</li>
+        <li>1 cup cornstarch</li>
+        <li>1/2 cup all-purpose flour</li>
+        <li>1 tbsp baking powder</li>
+        <li>1/2 tbsp white pepper</li>
+        <li>Pinch of salt</li>
+        <li>Oil for deep frying (vegetable, peanut or canola)</li>
+    </ul>
+    <h3>For the orange sauce:</h3>
+    <ul>
+        <li>1 cup fresh orange juice(or bottled but fresh nonetheless)</li>
+        <li>Zest of 1 large orange</li>
+        <li>3 tbsp of soy sauce</li>
+        <li>3 tbsp rice vinegar</li>
+        <li>1/2 cup sugar (or 1/3 cup honey for a richer glaze)</li>
+        <li>1 tbsp hoisin sauce (optional but adds depth)</li>
+        <li>2 cloves garlic (minced)</li>
+        <li>1 tbsp fresh ginger (minced)</li>
+        <li>1-2 tbsp chilli flakes (adjust for heat)</li>
+        <li>1 tbsp cornstarch + 2 tbsp water (slurry to thicken)</li>
+        <li>2 tbsp sesame oil</li>
+    </ul>
+    <h3>For garnish:</h3>
+    <ul>
+        <li>Sliced green onions</li>
+        <li>Toasted sesame seeds</li>
+        <li>Extra orange zest</li>
+    </ul>
+    <h2>Instructions:</h2>
+    <ol>
+        <li>Prep the chicken coating:</li>
+        <ul>
+            <li>In a large bowl, mix cornstarch, flour, baking powder, salt and white pepper.</li>
+            <li>Dip chicken pieces into beaten eggs, then coat them into the dry flour mix. Press gently so the coating sticks.</li>
+        </ul>
+        <li>Fry until crispy:</li>
+        <ul>
+            <li>Heat oil in a deep pot or work (~350°F / 175°C)</li>
+            <li>Fry chicken in batches until golden and crunchy (about 4-5 mins per batch). Drain on a wire rack or some paper towels</li>
+        </ul>
+        <li>Making the sauce:</li>
+        <ul>
+            <li>In a wok or skillet, add a touch of oil, then sauté garlic, ginger, and chilli flakes until fragrant.</li>
+            <li>Add pramge juice, zest, soy sauce, rice vinegar, hoisin, and sugar. Stir and bring to a simmer.</li>
+            <li>Add cornstarch slurry to thicken into that glossy, sticky glaze until fully coated and shiny.</li>
+            <li>Finish with sesame oil for depth.</li>
+        </ul>
+        <li>Combine chicken + sauce:</li>
+        <ul>
+            <li>Toss the crispy fried chicken in the hot orange glaze until fully coated and shiny.</li>
+        </ul>
+        <li>Serve:</li>
+        <ul>
+            <li>Plate with steamed or fried rice. Top with sesame seeds, green onions, and maybe extra orange zest for zing.</li>
+        </ul>
+    </ol>
 </body>
 </html>
