--- a/recipes/Tacos.html
+++ b/recipes/Tacos.html
@@ -2,9 +2,65 @@
 <html lang = "en">
 <head>
     <meta charset = "utf-8">
-    <title></title>
+    <title>Tacos</title>
 </head>
 <body>
-
+    <img src = "../images/Tacos.jpg">
+    <h2>Ingredients:</h2>
+    <h3>For the birria (stewed meat):</h3>
+    <ul>
+        <li>2 lbs beef chuck roast (or short rib mix)</li>
+        <li>3 dried guajilo chillies</li>
+        <li>2 dried ancho chillies</li>
+        <li>2 dried passila chillies (optional, for depth)</li>
+        <li>3 cloves garlic</li>
+        <li>1 small white onion</li>
+        <li>1 tsp cumin</li>
+        <li>1 tsp dried oregano</li>
+        <li>1 tsp smoked paprika</li>
+        <li>1 bay leaf</li>
+        <li>1 cup beef broth (or water)</li>
+        <li>2 tbsp apple cider vinegar</li>
+        <li>Salt & pepper to taste</li>
+    </ul>
+    <h3>For the tacos:</h3>
+    <ul>
+        <li>Corn tortillas</li>
+        <li>Chopped white onion & fresh cilantro</li>
+        <li>Lime wedges</li>
+        <li>Shredded cheese (Oaxaca or mozzarella)</li>
+    </ul>
+    <h2>Instructions:</h2>
+    <ol>
+        <li><h3>Prep the chillies:</h3></li>
+        <ul>
+            <li>Remove the stems and seeds from the dried chillies</li>
+            <li>Toast them lightly on a dry pan for ~1 minute until fragrant</li>
+            <li>Soak them in hot water for 15-20 minutes until soft</li>
+        </ul>
+        <li><h3>Make the birria sauce:</h3></li>
+        <ul>
+            <li>Blend all the soaked chillies with some garlic, onion, cumin, oregano, smoked paprika, vinegar, and a bit of soaking liquid until smooth</li>
+        </ul>
+        <li><h3>Cook the meat:</h3></li>
+        <ul>
+            <li>Cut the beef into large chunks</li>
+            <li>In a pot or slow cooker, brown the meat lightly (optional but adds flavour)</li>
+            <li>Add blended chillie sauce, bay leaf and broth</li>
+            <li>Simmer on low heat for 2-3 hrs (or in a slow cooker for 6-8 hrs) until meat is super tender and shreddable</li>
+        </ul>
+        <li><h3>Shred the meat:</h3></li>
+        <ul>
+            <li>Remove the meat from the pot, shred it, and return it to the sauce to soak up more flavour</li>
+        </ul>
+        <li><h3>Assemble tacos:</h3></li>
+        <ul>
+            <li>Dip tortillas briefly in the birria sauce(consommé) for extra flavour</li>
+            <li>Pan-fry on a hot skillet for 30-60 seconds per side</li>
+            <li>Fill with shredded meat, cheese (if using), and top with onion & cilantro</li>
+            <li>Serve with lime wedges and a small cup of consommé for dipping</li>
+        </ul>
+    </ol>
+    <p><b>Pro Tip:</b> Street vendors often double-dip the tortillas in the consommé-this is what give them that juicy, flavourful exterior.</p>
 </body>
 </html>
